--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Train Schedule</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
  
@@ -14,10 +15,10 @@
 <body>
 
 
-  <div class="container">
-      <div class="jumbotron text-center p-5 " style="background:saddlebrown;color: white">
-            <h1 class="display-4" style="font-weight:450" > <i class="far fa-newspaper"></i> Train Schedule</h1>
-            <h2>Choo Choo. Chee Chee.</h2>
+  <div class="container" style="font-family: cursive" >
+      <div class="jumbotron text-center p-3 mt-3 " style="background:#28a745;color: white">
+            <h1 class="display-4" style="font-weight:450" > <i class="fa fa-cog"></i> Train Schedule</h1>
+            <h2>all aboard!!!</h2>
       </div>
       <div class="card  my-3" style="border:solid steelblue; border-width: 2px;" >
                 
