--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
   <div class="container" style="font-family: cursive" >
       <div class="jumbotron text-center p-3 mt-3 " style="background:#28a745;color: white">
-            <h1 class="display-4" style="font-weight:450" > <i class="fa fa-cog"></i> Train Schedule</h1>
-            <h2>all aboard!!!</h2>
+            <h1 class="display-4" style="font-weight:450" > <i class="fa fa-cog"></i> Train Schedule <i class="fa fa-cog"></i></h1>
+            <h2> <i class="fa fa-cogs" ></i> all aboard!!! <i class="fa fa-cogs"></i> </h2>
       </div>
       <div class="card  my-3" style="border:solid steelblue; border-width: 2px;" >
                 
